<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie App</string>
    <string name="no_movies">No movies</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_movie">Save Movie</string>
    <string name="hint_name">Name (Required)</string>
    <string name="hint_producer">Producer</string>
    <string name="hint_director">Director</string>
    <string name="hint_actor">Actor</string>
    <string name="hint_actress">Actress</string>
    <string name="hint_release">Release</string>
    <string name="hint_budget">Budget</string>
    <string name="label_name">Name:</string>
    <string name="label_producer">Producer:</string>
    <string name="label_director">Director:</string>
    <string name="label_actor">Actor:</string>
    <string name="label_actress">Actress:</string>
    <string name="label_release">Release:</string>
    <string name="label_budget">Budget:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the movie</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a movie name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>